--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
+
   <body>
     <div id="app">
+      <p>hol hola</p>
       <header>
         <h1>FOOBAR</h1>
       </header>
