initial-fetch-form

--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
 
   <body>
     <div id="app">
-      <p>hol hola</p>
       <header>
         <h1>FOOBAR</h1>
       </header>
+      <main>
+      </main>
+
+      <template>
+        <div class="b-img">
+          <img src="" alt="" class="beer-img">
+        </div>
+     
+        <article class="beer-desc">
+
+           <h1 class="name"><span>Name:</span></h1>
+           <h1 class="cate"><span>Category:</span></h1>
+           <h1 class="alc-lvl"><span>Alcohol level:</span></h1>
+             <button>deleteme</button>
+        </article>
+    </template>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
