--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <h1>your Orders</h1>
         <button class="confirm">confirm</button>
 
+        <div class="second-temp">
+          <h1 class="bn"></h1>
+          <h1 class="desc"></h1>
+        </div>
+
         <label>total:</label>
         <input type="text" name="total" id="total" />
       </div>
