button pay improve

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <div class="container"> 
   
   <div class="checkbox_container">
-    <div class="box_order"> <h1 class="your_order">Your Order</h1>
+    <div class="box_order"> <h1 class="your_order">Your Order</h1></div>
     
-    <button class="pay-confirm">PAY -here</button></div>
+   <div class="pay"> <button class="pay-confirm">PAY -here</button></div>
      <div>
      
      </div>
